#89 first attempt at replacing some java.net.URIs with strings