@@ -64,8 +64,8 @@ class SdcRequiredTypesAndScopesTest {
 
         {
             // Append scopes from outside
-            var scopes = new ArrayList<>(Arrays.asList(URI.create("urn:dummy:one"), URI.create("urn:dummy:two")));
-            sdcRequiredTypesAndScopes.appendScopesAndSendHello(new HashSet<>(scopes));
+            ArrayList<String> scopes = new ArrayList<>(Arrays.asList("urn:dummy:one", "urn:dummy:two"));
+            sdcRequiredTypesAndScopes.appendScopesAndSendHello(new HashSet<String>(scopes));
             var scopesCaptor = ArgumentCaptor.forClass(Collection.class);
             verify(discoveryAccessMock, times(setScopesInteractionCount)).setScopes(scopesCaptor.capture());
             assertEquals(setScopesInteractionCount, scopesCaptor.getAllValues().size());
@@ -76,7 +76,7 @@ class SdcRequiredTypesAndScopesTest {
 
         {
             // Scopes do not change
-            var scopes = new ArrayList<>(Arrays.asList(URI.create("urn:dummy:one"), URI.create("urn:dummy:two")));
+            List<String> scopes = List.of("urn:dummy:one", "urn:dummy:two");
             var scopesCaptor = ArgumentCaptor.forClass(Collection.class);
             sdcRequiredTypesAndScopes.appendScopesAndSendHello(new HashSet<>(scopes));
             // Expect no further interaction - times retains 2
@@ -86,8 +86,7 @@ class SdcRequiredTypesAndScopesTest {
 
         {
             // Scopes change, add duplicates
-            var scopes = new ArrayList<>(Arrays.asList(URI.create("urn:dummy:three"), URI.create("urn:dummy:two"),
-                    GlueConstants.SCOPE_SDC_PROVIDER)); // put this as a duplicate as the updater will insert it again
+            List<String> scopes = List.of("urn:dummy:three", "urn:dummy:two", GlueConstants.SCOPE_SDC_PROVIDER); // put this as a duplicate as the updater will insert it again
             var scopesCaptor = ArgumentCaptor.forClass(Collection.class);
             sdcRequiredTypesAndScopes.appendScopesAndSendHello(new HashSet<>(scopes));
             // Expect no further interaction - times retains 2
@@ -238,11 +237,11 @@ class SdcRequiredTypesAndScopesTest {
         verify(discoveryAccessMock, times(sendHelloInteractionCount)).sendHello();
     }
 
-    private void verifyScopes(Collection<URI> expectedScopes, Collection<URI> actualScopes) {
+    private void verifyScopes(Collection<String> expectedScopes, Collection<String> actualScopes) {
         assertEquals(expectedScopes.size(), actualScopes.size());
         int matchCount = 0;
-        for (URI expectedScope : expectedScopes) {
-            for (URI actualScope : actualScopes) {
+        for (String expectedScope : expectedScopes) {
+            for (String actualScope : actualScopes) {
                 matchCount += expectedScope.equals(actualScope) ? 1 : 0;
             }
         }
